welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:8: error: ';' expected but 'else' found.
    else gauche();// Write your code here
    ^SlugHunting:12: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:28: error: Unmatched closing brace '}' ignored here
}
^